[project]
name = "react_agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Murad",email = "murnat28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["llama-index (>=0.12.49,<0.13.0)", "tenacity (>=9.1.2,<10.0.0)", "llama-index-llms-gemini (>=0.5.0,<0.6.0)", "wikipedia-api (>=0.8.1,<0.9.0)", "aiohttp (>=3.12.14,<4.0.0)"]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
